Fix: #2656: Splash content aligns on large screens (#2658)
* large screen alignment fix

* Better centering of buttons & CSS alphabetized

* better horizontal center

* Buttons and Bullets center aligned

* mobile fix

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3440,6 +3440,9 @@ md-card.preview-conversation-skin-supplemental-card {
 .oppia-splash-section-two {
   background-color: #f2f2ee;
   color: #2c4841;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
 }
 
 .oppia-splash-button {
@@ -3455,12 +3458,23 @@ md-card.preview-conversation-skin-supplemental-card {
   transform: translateX(-50%);
   width: 360px;
 }
+
 .oppia-splash-button:hover,
 .oppia-splash-button:focus,
 .oppia-splash-button:active {
   background-color: rgba(5, 190, 178, 1);
   color: #fff;
 }
+
+.oppia-splash-button-container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    transform: translate(-150px, 10px);
+    position: relative;
+    width: 100%;
+}
+
 @media (min-width: 768px) {
   .oppia-splash-button-browse {
     left: -webkit-calc(50% - 200px);
@@ -3489,6 +3503,13 @@ md-card.preview-conversation-skin-supplemental-card {
   .oppia-splash-button-create {
     left: 50%;
     margin-top: 50px;
+  }
+  .oppia-splash-button-container {
+      max-width: none;
+      position: absolute;
+      transform: translate(0, 0);
+      width: 100%;
+      z-index: 10;
   }
 
   .oppia-splash-section-two-content {
